Added Map and Added address field to Service

--- a/WhatsIn/Views/Home/Index.cshtml
+++ b/WhatsIn/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="intro">
     <div class="fullpage">
         <div class="ab-wrap">
-            <div class="ab-center">
+            <div class="ab-center" style="background-color:cadetblue;">
                 <div class="wowload fadeInDown">
                     <!--img src="images/logo.png" class="wowload rotateIn"-->
                     <h1 class="title">What's In?</h1>
@@ -31,16 +31,17 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 wowload fadeInLeftBig">
-                <h3>About WhatsIn</h3>
-                <p>WhatsIn! is a platform to help customers easily find people selling intangible products or services.</p>
+                <h3>About What's In?</h3>
+                <p>What's In? is a platform to help people easily find what they are looking for whereever they are.</p>
             </div>
-            <div class="col-md-6 text-center"><a href="http://socialsteak.com/" target="_blank" title="credit www.socialsteak.com"><img src="images/service.jpg" class="img-responsive wowload fadeInUp" alt="http://socialsteak.com/"></a></div>
+            <div class="col-md-6 text-center"><img src="images/traveling.jpg" class="img-responsive wowload fadeInUp" style="width:90%"></div>
+            <br />
         </div>
     </div>
 </div>
 <!-- about -->
 <!-- contact -->
-<div class="contact wowload fadeIn" id="contact">
+<div class="contact wowload fadeIn" id="contact" style="background-color:cadetblue;">
 
     <div class="container">
         <h4 class="text-center">@ViewBag.Message</h4>
