--- a/WhatsIn/Views/Shared/_Layout.cshtml
+++ b/WhatsIn/Views/Shared/_Layout.cshtml
@@ -3,23 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GoSerbisyo</title>
+    <title>What's In?</title>
     <!-- Google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,800' rel='stylesheet' type='text/css'>
     <!-- font awesome -->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- animate.css
     <link rel="stylesheet" href="assets/animate/animate.css" />
         -->
     <!-- favicon -->
-    <link rel="shortcut icon" href="~/images/logo.png" type="image/x-icon">
-    <link rel="icon" href="~/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="~/images/whats_in__icon.png" type="image/x-icon">
+    <link rel="icon" href="~/images/whats_in__icon.png" type="image/x-icon">
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzzjc4KZD6yKQEuXi-DDa5BWt3iN09joo&sensor=false&libraries=places"></script>
+
+   
 
 </head>
 <body id="home">
@@ -31,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("WhatsIn", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "font-weight:bold" })
+                @Html.ActionLink("What's In?", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "font-weight:bold" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -56,15 +58,15 @@
         </div>
         <!-- footer -->
         <div class="footer text-center wowload fadeIn">
-            <span class="text-center" style="color:white;">Copyright © 2018 GoSerbisyo</span><br /><br />
+            <span class="text-center" style="color:white;">Copyright © 2018 What's In?</span><br /><br />
             <span class="text-center" style="color:white;"><a href="@Url.Action("Disclaimer","Home")" target="_blank">Disclaimer</a> | <a href="@Url.Action("PrivacyPolicy","Home")" target="_blank">Privacy Policy</a> | <a href="@Url.Action("TermsOfUse","Home")" target="_blank">Terms Of Use</a></span><br /><br />
-            <span class="text-center" style="color:white;">Powered by: <a href="http://thebootstrapthemes.com">www.thebootstrapthemes.com</a> </span><br /><br />
+            <!--span class="text-center" style="color:white;">Powered by: <a href="http://thebootstrapthemes.com">www.thebootstrapthemes.com</a> </!--span><br /><br />
             <div class="social">
                 <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
                 <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
                 <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
                 <a href="#"><i class="fa fa-pinterest fa-2x"></i></a>
-            </div>
+            </div-->
 
         </div>
         <!-- footer -->
