--- a/WhatsIn/Views/Results/Details.cshtml
+++ b/WhatsIn/Views/Results/Details.cshtml
@@ -1,8 +1,9 @@
 ﻿@model WhatsIn.Models.ResultViewModel
 
-<div class="col-md-12" style="margin-top:100px;">
-    <div class="col-md-9">
+<div class="col-md-12" style="margin-top:50px;background-color:antiquewhite;" >
+    <div class="col-md-9" style="margin-top:20px;">
         <div class="row">
+            <br />
             <h3>@Model.ServiceName</h3>
             <h4>@Model.ServiceAddress</h4><br /><br />
             <h4>@Model.ServiceLocation</h4><br /><br />
