--- a/WhatsIn/Views/Results/Index.cshtml
+++ b/WhatsIn/Views/Results/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Results";
 }
 
-<div class="row margin-top-15">
+<div class="row margin-top-15" style="background-color:antiquewhite">
 
     <br /><br /><br /><br /><br /><br />
     <div class="row">
