--- a/WhatsIn/Views/Home/Index.cshtml
+++ b/WhatsIn/Views/Home/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@model WhatsIn.Models.ServiceModel
 
-<div class="intro">
-    <div class="fullpage">
+<div class="intro" style="margin-top:50px;">
+    <div class="fullpage" style="background-color:antiquewhite;">
         <div class="ab-wrap">
-            <div class="ab-center" style="background-color:cadetblue;">
+            <div class="ab-center" >
                 <div class="wowload fadeInDown">
                     <!--img src="images/logo.png" class="wowload rotateIn"-->
-                    <h1 class="title">What's In?</h1>
+                    <!--h1 class="title">What's In?</!--h1-->
+                      <img src="images/whats_in__icon.png" class="wowload rotateIn">
                     <!--p>
                         Ready to serve you!
                     </p-->
@@ -41,11 +42,11 @@
 </div>
 <!-- about -->
 <!-- contact -->
-<div class="contact wowload fadeIn" id="contact" style="background-color:cadetblue;">
+<div class="contact wowload fadeIn" id="contact" style="background-color:antiquewhite;">
 
-    <div class="container">
-        <h4 class="text-center">@ViewBag.Message</h4>
-        <h2 class="text-center">Contact us</h2>
+    <div class="container text-center" >
+        <h4>@ViewBag.Message</h4>
+        <h2 style="color:#333">Contact us</h2>
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
                 <form>
