--- a/WhatsIn/Views/Shared/_Layout.cshtml
+++ b/WhatsIn/Views/Shared/_Layout.cshtml
@@ -12,8 +12,9 @@
     <link rel="stylesheet" href="assets/animate/animate.css" />
         -->
     <!-- favicon -->
-    <link rel="shortcut icon" href="~/images/whats_in__icon.png" type="image/x-icon">
-    <link rel="icon" href="~/images/whats_in__icon.png" type="image/x-icon">
+    <!--link rel="shortcut icon" href="~/images/whats_in__icon_sm.png" type="image/x-icon"-->
+    <!--link rel="icon" href="~/images/whats_in__icon_sm.png"-->
+    <link rel="icon" href="~/images/favicon.ico">
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -21,7 +22,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 
-   
+
 
 </head>
 <body id="home">
@@ -33,7 +34,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("What's In?", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "font-weight:bold" })
+                @*Html.ActionLink("What's In?", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "font-weight:bold" })*@
+                <a href="@Url.Action("Index", "Home")"><img src="~/images/whats_in__icon.png" class="navbar-brand"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -45,30 +47,30 @@
                     }
                     <!--li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li-->
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
+    </div>
 
-        <div class="container body-content" style="min-height:800px;">
-            @RenderBody()
-        </div>
-        <!-- footer -->
-        <div class="footer text-center wowload fadeIn">
-            <span class="text-center" style="color:white;">Copyright © 2018 What's In?</span><br /><br />
-            <span class="text-center" style="color:white;"><a href="@Url.Action("Disclaimer","Home")" target="_blank">Disclaimer</a> | <a href="@Url.Action("PrivacyPolicy","Home")" target="_blank">Privacy Policy</a> | <a href="@Url.Action("TermsOfUse","Home")" target="_blank">Terms Of Use</a></span><br /><br />
-            <!--span class="text-center" style="color:white;">Powered by: <a href="http://thebootstrapthemes.com">www.thebootstrapthemes.com</a> </!--span><br /><br />
-            <div class="social">
-                <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
-                <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
-                <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-                <a href="#"><i class="fa fa-pinterest fa-2x"></i></a>
-            </div-->
+    <div class="container body-content" style="min-height:800px;">
+        @RenderBody()
+    </div>
+    <!-- footer -->
+    <div class="footer text-center wowload fadeIn">
+        <span class="text-center" style="color:white;">Copyright © 2018 What's In?</span><br /><br />
+        <span class="text-center" style="color:white;"><a href="@Url.Action("Disclaimer","Home")" target="_blank">Disclaimer</a> | <a href="@Url.Action("PrivacyPolicy","Home")" target="_blank">Privacy Policy</a> | <a href="@Url.Action("TermsOfUse","Home")" target="_blank">Terms Of Use</a></span><br /><br />
+        <!--span class="text-center" style="color:white;">Powered by: <a href="http://thebootstrapthemes.com">www.thebootstrapthemes.com</a> </!--span><br /><br />
+        <div class="social">
+            <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
+            <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fa fa-pinterest fa-2x"></i></a>
+        </div-->
 
-        </div>
-        <!-- footer -->
-    </body>
+    </div>
+    <!-- footer -->
+</body>
 </html>
