--- a/WhatsIn/Views/Home/Index.cshtml
+++ b/WhatsIn/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                         <div class="form-group">
                             @Html.TextBoxFor(m=> m.Location, new { @class = "form-control", placeholder = "Ex. Santa Rosa Laguna, Quezon City" })                            
                         </div>
-                        <button type="submit" class="btn btn-success">Search</button>
+                        <button type="submit" class="btn btn-success"><span class="fa fa-search"></span>&nbsp;Search</button>
                     }
                 </div>
             </div>
