--- a/WhatsIn/Views/Home/MyServices.cshtml
+++ b/WhatsIn/Views/Home/MyServices.cshtml
@@ -4,41 +4,23 @@
     ViewBag.Title = "My Establishment";
 }
 
-<div class="row margin-top-15">
-    <div class="col-xs-12">
-        <div class="col-xs-6">
-            <div class="page-head">
-                <div class="page-title">
-                    <h1>
-                        <span>My Establishment</span>
-                    </h1>
+<div class="row margin-top-15" style="background-color:antiquewhite">
+    <br /><br /><br /><br /><br /><br />
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-xs-12">
+                <h4>My Business</h4><br />
+                <div class="form-group">
+                    <button id="CreateNewServiceButton" class="btn btn-success" data-toggle="modal" data-target="#myServiceModal"><span class="fa fa-plus"></span>&nbsp; Post My Business</button>
+                    <!--button id="CreateNewServiceButton" class="btn btn-primary" data-toggle="modal" data-target="#myServiceModal"><i class="fa fa-plus"></i> Post My Business</button-->
                 </div>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-xs-12">
-                    <div class="col-xs-2 text-left">
-                        &nbsp;
-                    </div>
-                    <div class="col-xs-4 text-left">
-                        <h4>My Services</h4>
-                    </div>
-                    <div class="col-xs-4 text-right">
-                        <button id="CreateNewServiceButton" class="btn btn-primary" data-toggle="modal" data-target="#myServiceModal"><i class="fa fa-plus"></i> Offer a Service</button>
-                    </div>
-                    <div class="col-xs-2 text-right">
-                        &nbsp;
-                    </div>
+            <div class="col-xs-12">
+                <div id="serviceListDiv">
+                    @{Html.RenderAction("ServiceList", "Home", new { Model = Model });}
                 </div>
-                <div class="col-xs-12">
-                    <div id="serviceListDiv">
-                        @{Html.RenderAction("ServiceList", "Home", new { Model = Model });}
-                    </div>
-                </div>
-
             </div>
+
         </div>
     </div>
 </div>
@@ -49,7 +31,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">My Service</h4>
+                <h4 class="modal-title" id="myModalLabel">My Business</h4>
             </div>
             <div class="modal-body">
                 <form>
@@ -120,7 +102,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" id="btnCloseServiceImageModal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">My Service Image</h4>
+                <h4 class="modal-title" id="myModalLabel">My Business Images</h4>
             </div>
             <div class="modal-body" id="divServiceImageModal">
                 <p>Load partial view here..</p>
@@ -244,6 +226,23 @@
         location.reload(true);
     });
 
+    $('.RemoveServiceButton').click(function (e) {
+        e.preventDefault();
+
+        if (confirm('Are you sure you want to remove this post?')) {
+            var serviceId = $(this).prop('id');
+             $.ajax({
+                type: "Post",
+                url: "@Url.Action("RemoveService", "Home")",
+                data: {
+                    serviceId: serviceId,
+                },
+                success: function (data) {
+                    location.reload();
+                },
+            });
+        }
+    });
     google.maps.event.addDomListener(window, 'load', function () {
         var options = {
             componentRestrictions: { country: "ph" }
