--- a/WhatsIn/Views/Results/Search.cshtml
+++ b/WhatsIn/Views/Results/Search.cshtml
@@ -8,5 +8,5 @@
     </div>
     <div class="form-group">
     </div>
-    <button type="submit" class="btn btn-success">Search</button>
+    <button type="submit" class="btn btn-success"><span class="fa fa-search"></span>&nbsp;Search</button>
 }
