--- a/WhatsIn/Views/Home/Index.cshtml
+++ b/WhatsIn/Views/Home/Index.cshtml
@@ -32,8 +32,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 wowload fadeInLeftBig">
-                <h3>About What's In?</h3>
-                <p>What's In? is a platform to help people easily find what they are looking for whereever they are.</p>
+                <!--h3>About What's In?</!--h3-->
+                <h3>#DiscoverWhatsInYourPlace</h3>
+                <h4>#TasteTheFoods</h4>
+                <h4>#ExploreThePlaces</h4>
+                <h4>#ExperienceTheFun</h4>
+                <!--p><h3>#DiscoverWhatsInYourPlace</h3>What's In? is a platform to help people easily find what they are looking for whereever they are.</p-->
             </div>
             <div class="col-md-6 text-center"><img src="images/traveling.jpg" class="img-responsive wowload fadeInUp" style="width:90%"></div>
             <br />
