--- a/WhatsIn/Views/Home/MyServices.cshtml
+++ b/WhatsIn/Views/Home/MyServices.cshtml
@@ -9,9 +9,9 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-xs-12">
-                <h4>My Business</h4><br />
+                <h3>#BeDiscovered</h3><br />
                 <div class="form-group">
-                    <button id="CreateNewServiceButton" class="btn btn-success" data-toggle="modal" data-target="#myServiceModal"><span class="fa fa-plus"></span>&nbsp; Post My Business</button>
+                    <button id="CreateNewServiceButton" class="btn btn-success" data-toggle="modal" data-target="#myServiceModal"><span class="fa fa-plus"></span>&nbsp; Post My Business / Service</button>
                     <!--button id="CreateNewServiceButton" class="btn btn-primary" data-toggle="modal" data-target="#myServiceModal"><i class="fa fa-plus"></i> Post My Business</button-->
                 </div>
             </div>
