--- a/WhatsIn/Views/Results/Details.cshtml
+++ b/WhatsIn/Views/Results/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WhatsIn.Models.ResultViewModel
 
-<div class="col-md-12" style="margin-top:50px;background-color:antiquewhite;" >
+<div class="col-md-12" style="margin-top:50px;background-color:antiquewhite;">
     <div class="col-md-9" style="margin-top:20px;">
         <div class="row">
             <br />
@@ -44,84 +44,31 @@
         </div>
         <div class="row">
             <div class="form-group">
-                <p>
-                    <a href="@string.Concat(" https://www.facebook.com/", Model.ServiceFacebookPage.Substring(3))">@*Model.ServiceFacebookPage*@ <i class="fa fa-facebook fa-2x"></i></a>
-                    &nbsp;<a href="@string.Concat(" https://www.twitter.com/", Model.ServiceTwitterPage.Substring(8))">@*Model.ServiceTwitterPage*@ <i class="fa fa-twitter fa-2x"></i></a>
-                    &nbsp;<a href="@string.Concat(" https://www.instagram.com/", Model.ServiceInstagramPage.Substring(10))">@*Model.ServiceInstagramPage*@ <i class="fa fa-instagram fa-2x"></i></a>
-                    &nbsp;<a href="@Model.ServiceWebsiteAddress" target="_blank">@*Model.ServiceWebsiteAddress*@ <i class="fa fa-link fa-2x"></i></a>
-                </p>
+                    <div class="text-left">
+                        <a href="@string.Concat(" https://www.facebook.com/", Model.ServiceFacebookPage.Substring(3))">@*Model.ServiceFacebookPage*@ <i class="fa fa-facebook fa-2x"></i></a>
+                        &nbsp;<a href="@string.Concat(" https://www.twitter.com/", Model.ServiceTwitterPage.Substring(8))">@*Model.ServiceTwitterPage*@ <i class="fa fa-twitter fa-2x"></i></a>
+                        &nbsp;<a href="@string.Concat(" https://www.instagram.com/", Model.ServiceInstagramPage.Substring(10))">@*Model.ServiceInstagramPage*@ <i class="fa fa-instagram fa-2x"></i></a>
+                        &nbsp;<a href="@Model.ServiceWebsiteAddress" target="_blank">@*Model.ServiceWebsiteAddress*@ <i class="fa fa-link fa-2x"></i></a>
+
+                    </div>
+                    <div class="text-right">
+                        <button type="button" class="btn btn-success" id="btnOpenWaze">
+                            <i class="fa fa-car fa-2x"></i> Get Direction
+                        </button>
+                        <input type="hidden" id="latlong" class="form-group" />
+                    </div>
             </div>
         </div>
         <div class="row">
+            <div id="map" style="height: 300px"></div>
+        </div>
+        <div class="row">
             <div class="form-group">
-                <div id="map" style="height: 300px"></div>
+               &nbsp;
             </div>
         </div>
     </div>
     <div class="col-md-3">
-        <!--div class="row">
-            <div class="form-group">
-                <br /><br /><br /><br /><br /><br />
-                <label class="control-label">Posted by:</label>
-                if (User.Identity.IsAuthenticated && Model.ServiceLinkToProfile)
-                {
-                    <p><a href="string.Concat("https://www.facebook.com/", Model.UserNameIdentifier)">Model.UserName</a></p>
-                }
-                else
-                {
-                    <p>Model.UserName</p>
-                }
-            </div>
-        </div-->
-        <!--div class="row">
-            <div class="form-group">
-                <label class="control-label">Location:</label>
-                <p>@*Model.UserLocation*@</p>
-            </div>
-        </div-->
-        <!--div class="row">
-            <div>
-                &nbsp;
-            </div>
-            <div class="form-group">
-                <label class="control-label">Contact No.(s):</label>
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <p><a href="tel:@Model.UserContactNumber">@Model.UserContactNumber</a></p>
-                }
-                else
-                {
-                    <p>@Html.ActionLink("Login", "Login", "Account", new { returnUrl = Request.RawUrl }, null) to view Contact Number</p>
-                }
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group">
-                <label class="control-label">Schedule:</label>
-                <p style="white-space:pre-wrap;">@Model.ServiceSchedule</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group">
-                <p><i class="fa fa-facebook fa-2x"></i>&nbsp;<a href="@string.Concat(" https://www.facebook.com/", Model.ServiceFacebookPage.Substring(3))">@Model.ServiceFacebookPage</a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group">
-                <p><i class="fa fa-twitter fa-2x"></i>&nbsp;<a href="@string.Concat(" https://www.twitter.com/", Model.ServiceTwitterPage.Substring(8))">@Model.ServiceTwitterPage</a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group">
-                <p><i class="fa fa-instagram fa-2x"></i>&nbsp;<a href="@string.Concat(" https://www.instagram.com/", Model.ServiceInstagramPage.Substring(10))">@Model.ServiceInstagramPage</a></p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group">
-                <p><i class="fa fa-link fa-2x"></i>&nbsp;<a href="@Model.ServiceWebsiteAddress" target="_blank">@Model.ServiceWebsiteAddress</a></p>
-            </div>
-        </div-->
-
         <div class="row">
             <div>
                 &nbsp;
@@ -389,7 +336,11 @@
         });
     });
 
-
+     $('#btnOpenWaze').click(function (e) {
+         e.preventDefault();
+         var url = "https://waze.com/ul?ll=" + $('#latlong').val() + "&navigate=yes";
+         window.open(url, '_blank');       
+    });  
 
 </script>
 <script>
@@ -406,7 +357,7 @@
 
         var geocoder = new google.maps.Geocoder();
         geocodeAddress(geocoder, map);
-     }
+    }
 
     function geocodeAddress(geocoder, resultsMap) {
         var address = document.getElementById('ServiceAddress').value;
@@ -417,8 +368,9 @@
                 resultsMap.setCenter(results[0].geometry.location);
                 var marker = new google.maps.Marker({
                     map: resultsMap,
-                    position: results[0].geometry.location
+                    position: results[0].geometry.location                    
                 });
+                $('#latlong').val(results[0].geometry.location);
             } else {
                 alert('Geocode was not successful for the following reason: ' + status);
             }
