--- a/WhatsIn/Views/Shared/_Layout.cshtml
+++ b/WhatsIn/Views/Shared/_Layout.cshtml
@@ -8,12 +8,13 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,800' rel='stylesheet' type='text/css'>
     <!-- font awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <!-- animate.css
     <link rel="stylesheet" href="assets/animate/animate.css" />
         -->
     <!-- favicon -->
     <!--link rel="shortcut icon" href="~/images/whats_in__icon_sm.png" type="image/x-icon"-->
-    <link rel="icon" href="~/images/whats_in__icon_sm.png" type="image/x-icon"/>
+    <link rel="icon" href="~/images/whats_in__icon_sm.png" type="image/x-icon" />
     <!--link rel="icon" href="~/images/favicon.ico"-->
 
     @Styles.Render("~/Content/css")
@@ -22,7 +23,8 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 
-
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 </head>
 <body id="home">
