--- a/WhatsIn/Views/Shared/_LoginPartial.cshtml
+++ b/WhatsIn/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @Html.AntiForgeryToken()
 
 <ul class="nav navbar-nav navbar-right">
-    <li>@Html.ActionLink("I own a Business", "MyServices", "Home")</li>
+    <li>@Html.ActionLink("#BeDiscovered", "MyServices", "Home")</li>
     <li>
         @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
     </li>
