--- a/WhatsIn/Views/Results/Index.cshtml
+++ b/WhatsIn/Views/Results/Index.cshtml
@@ -7,8 +7,8 @@
 <div class="row margin-top-15" style="background-color:antiquewhite">
 
     <br /><br /><br /><br /><br /><br />
-    <div class="row">
-        <div class="col-md-12">
+    <div class="col-xs-12">
+        <div class="row">
             <div class="col-xs-12 text-left" id="divSeach">
                 @{Html.RenderPartial("Search", new WhatsIn.Models.ServiceModel()); }
                 <input type="hidden" class="form-control" name="service-location" id="service-location" value="@ViewBag.Location"> &nbsp;&nbsp;
