--- a/WhatsIn/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/WhatsIn/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WhatsIn.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Login using your Facebook account.</h4>
+<h4></h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
@@ -22,9 +22,13 @@
                     {
                     <div class="alert alert-warning alert-dismissible" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <strong>Warning!</strong> This website uses cookies and stores your personal Facebook information. By clicking the button Continue you are agreeing to our Terms of Use. Review our <a href="@(Url.Action("TermsOfUse", "Home"))" style="color:rgb(208, 88, 3);">Terms of Use</a> for more details.
+                        <strong>Warning!</strong> This website uses cookies and stores your personal information. By clicking the button below, you are agreeing to our Terms of Use. Review our <a href="@(Url.Action("TermsOfUse", "Home"))" style="color:rgb(208, 88, 3);">Terms of Use</a> for more details.
                     </div>
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">Click to Continue</button>
+                    <div class="col-xs-12">
+                        <div class="col-xs-3"></div>
+                            <div class="col-xs-6 center-block"><button type="submit" class="btn btn-primary btn-block" id="@p.AuthenticationType" style="background: #4267B2!important; border-color: #4267B2!important;" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account"><i class="fa fa-facebook fa-2x"></i>&nbsp; Continue with Facebook</button></div>
+                            <div class="col-xs-3"></div>
+                    </div>
                     }
                 </p>
             </div>
