--- a/WhatsIn/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/WhatsIn/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -24,10 +24,10 @@
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         <strong>Warning!</strong> This website uses cookies and stores your personal information. By clicking the button below, you are agreeing to our Terms of Use. Review our <a href="@(Url.Action("TermsOfUse", "Home"))" style="color:rgb(208, 88, 3);">Terms of Use</a> for more details.
                     </div>
-                    <div class="col-xs-12">
-                        <div class="col-xs-3"></div>
-                            <div class="col-xs-6 center-block"><button type="submit" class="btn btn-primary btn-block" id="@p.AuthenticationType" style="background: #4267B2!important; border-color: #4267B2!important;" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account"><i class="fa fa-facebook fa-2x"></i>&nbsp; Continue with Facebook</button></div>
-                            <div class="col-xs-3"></div>
+                    <div class="col-xs-12 col-md-12">
+                        <div class="col-md-3"></div>
+                            <div class="col-xs-12 col-md-6 center-block"><button type="submit" class="btn btn-primary btn-block" id="@p.AuthenticationType" style="background: #4267B2!important; border-color: #4267B2!important;" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account"><i class="fa fa-facebook fa-2x"></i>&nbsp; Continue with Facebook</button></div>
+                            <div class="col-md-3"></div>
                     </div>
                     }
                 </p>
