--- a/WhatsIn/Views/Shared/_Layout.cshtml
+++ b/WhatsIn/Views/Shared/_Layout.cshtml
@@ -23,8 +23,13 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-7887759850914036",
+            enable_page_level_ads: true
+        });
+    </script>
 
 </head>
 <body id="home">
