8-23-18 added google places autocomplete

--- a/WhatsIn/Views/Home/MyServices.cshtml
+++ b/WhatsIn/Views/Home/MyServices.cshtml
@@ -110,6 +110,7 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDI90tw9r9ufk3o5jHs4hmnDryfIW0F4WQ&libraries=places"></script>
 
 <script>
 
