--- a/WhatsIn/Views/Home/Index.cshtml
+++ b/WhatsIn/Views/Home/Index.cshtml
@@ -3,18 +3,18 @@
 <div class="intro" style="margin-top:50px;">
     <div class="fullpage" style="background-color:antiquewhite;">
         <div class="ab-wrap">
-            <div class="ab-center" >
+            <div class="ab-center">
                 <div class="wowload fadeInDown">
                     <!--img src="images/logo.png" class="wowload rotateIn"-->
                     <!--h1 class="title">What's In?</!--h1-->
-                      <img src="images/whats_in__icon.png" class="wowload rotateIn">
+                    <img src="images/whats_in__icon.png" class="wowload rotateIn">
                     <!--p>
                         Ready to serve you!
                     </p-->
                     @using (Html.BeginForm("", "Results", FormMethod.Post, new { @class = "form-inline", role = "form" }))
                     {
                         <div class="form-group">
-                            @Html.TextBoxFor(m=> m.Location, new { @class = "form-control", placeholder = "Ex. Santa Rosa Laguna, Quezon City" })                            
+                            @Html.TextBoxFor(m => m.Location, new { @class = "form-control", placeholder = "Ex. Santa Rosa Laguna, Quezon City" })
                         </div>
                         <button type="submit" class="btn btn-success"><span class="fa fa-search"></span>&nbsp;Search</button>
                     }
@@ -48,7 +48,7 @@
 <!-- contact -->
 <div class="contact wowload fadeIn" id="contact" style="background-color:antiquewhite;">
 
-    <div class="container text-center" >
+    <div class="container text-center">
         <h4>@ViewBag.Message</h4>
         <h2 style="color:#333">Contact us</h2>
         <div class="row">
@@ -71,14 +71,23 @@
     </div>
 </div>
 <!-- contact -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDI90tw9r9ufk3o5jHs4hmnDryfIW0F4WQ&libraries=places"></script>
 
 <script>
+    google.maps.event.addDomListener(window, 'load', function () {
+        var options = {
+            componentRestrictions: { country: "ph" }
+        };
+        var input = document.getElementById('Location');
+        var places = new google.maps.places.Autocomplete(input, options);
+    });
+
     $('#btnContact').click(function (e) {
         e.preventDefault();
         var name = $('#name').val();
         var email = $('#email').val();
         var message = $('#message').val();
-        
+
         $.ajax({
             type: "POST",
             url: "@Url.Action("SendMessage","Home")",
