8-28-18 - Added Mcafee TrustedSite and Email in footer

--- a/WhatsIn/Views/Shared/_Layout.cshtml
+++ b/WhatsIn/Views/Shared/_Layout.cshtml
@@ -69,8 +69,8 @@
     <div class="footer text-center wowload fadeIn">
         <span class="text-center" style="color:white;">Copyright © 2018 What's In?</span><br /><br />
         <span class="text-center" style="color:white;"><a href="@Url.Action("Disclaimer","Home")" target="_blank">Disclaimer</a> | <a href="@Url.Action("PrivacyPolicy","Home")" target="_blank">Privacy Policy</a> | <a href="@Url.Action("TermsOfUse","Home")" target="_blank">Terms Of Use</a></span><br /><br />
-        <!--span class="text-center" style="color:white;">Powered by: <a href="http://thebootstrapthemes.com">www.thebootstrapthemes.com</a> </!--span><br /><br />
-        <div class="social">
+        <span class="text-center" style="color:white;">Email us at <a href="mailto:contact-us@whatsin.ph">contact-us@whatsin.ph</a> </span><br /><br />
+        <!--div class="social">
             <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
             <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
             <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
@@ -79,5 +79,6 @@
 
     </div>
     <!-- footer -->
+	<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 </body>
 </html>
