--- a/WhatsIn/Views/Shared/_Layout.cshtml
+++ b/WhatsIn/Views/Shared/_Layout.cshtml
@@ -80,5 +80,6 @@
     </div>
     <!-- footer -->
 	<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+	<span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=gqALSQEFicnA2WBYgOwdtAS3LVkDY5KIqBaPCSihTP43uemv2YxAiMgk6sP8"></script></span>
 </body>
 </html>
