--- a/WhatsIn/Views/Shared/_Layout.cshtml
+++ b/WhatsIn/Views/Shared/_Layout.cshtml
@@ -82,4 +82,30 @@
 	<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 	<span id="siteseal"><script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=gqALSQEFicnA2WBYgOwdtAS3LVkDY5KIqBaPCSihTP43uemv2YxAiMgk6sP8"></script></span>
 </body>
+<div class="modal fade" id="modalTermsAndCon" role="dialog" >
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>        
+      </div>
+      <div class="modal-body">
+		<strong>Warning!</strong> By clicking the button "I Agree!" you are agreeing that you have read and accepted our Terms of Use, Disclaimer and Privacy Policy. Please review our <a href="@(Url.Action("TermsOfUse", "Home"))" style="color:rgb(208, 88, 3);">Terms of Use</a>, <a href="@(Url.Action("Disclaimer", "Home"))" style="color:rgb(208, 88, 3);">Disclaimer</a>, and <a href="@(Url.Action("PrivacyPolicy", "Home"))" style="color:rgb(208, 88, 3);">Privacy Policy</a> for more details.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" id="btnIAgree" class="btn btn-primary">I Agree!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </html>
+<script>
+
+$('#btnIAgree').click(function (e){
+	alert("test");
+	e.preventDefault();
+	window.location.href = "@Url.Action("UpdateIsServiceExistsTag", "Home")";
+});
+
+</script>
