--- a/WhatsIn/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/WhatsIn/Views/Account/ExternalLoginConfirmation.cshtml
@@ -37,7 +37,7 @@
     <div class="form-group text-center">
         @Html.LabelFor(m => m.Name, new { @class = "col-md-4 control-label left" })
         <div class="col-md-5">
-            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @readonly = "true" })
             @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
         </div>
         <div class="col-md-3">&nbsp;</div>
@@ -45,12 +45,12 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-4 control-label left" })
         <div class="col-md-5">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @readonly = "true" })
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
         </div>
         <div class="col-md-3">&nbsp;</div>
     </div>
-    <div class="form-group">
+    <!--div class="form-group">
         @Html.LabelFor(m => m.Address, new { @class = "col-md-4 control-label left" })
         <div class="col-md-5">
             @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
@@ -65,7 +65,7 @@
             @Html.ValidationMessageFor(m => m.Location, "", new { @class = "text-danger", @width = "150" })
         </div>
         <div class="col-md-3">&nbsp;</div>
-    </div>   
+    </div-->
     <div class="form-group">
         @Html.LabelFor(m => m.ContactNumber, new { @class = "col-md-4 control-label left" })
         <div class="col-md-5">
