--- a/WhatsIn/Views/Results/Index.cshtml
+++ b/WhatsIn/Views/Results/Index.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div class="col-xs-12">
                 <ul class="list-inline">
-                    <li><button type="button" class="btn btn-link" id="btnAllTypes"><i class="fa fa-table"></i><span class="badge">@ViewBag.All</span></button></li>
+                    <li><button type="button" class="btn btn-link" id="btnAllTypes"><i class="fa fa-refresh"></i><span class="badge">@ViewBag.All</span></button></li>
                     @if (ViewBag.FoodAndDiningCount > 0)
                     {
                         <li><button type="button" class="btn btn-link" id="btnFoodAndDining"><i class="fa fa-cutlery"></i><span class="badge">@ViewBag.FoodAndDiningCount</span></button></li>
