--- a/WhatsIn/Views/Shared/_LoginPartial.cshtml
+++ b/WhatsIn/Views/Shared/_LoginPartial.cshtml
@@ -6,11 +6,12 @@
     @Html.AntiForgeryToken()
 
 <ul class="nav navbar-nav navbar-right">
-	<li><button id="btnBeDiscovered" type="button" class="btn btn-link " style="padding-top: 15px;padding-left:12px;">#BeDiscovered</button></li>
+    <li><button id="btnBeDiscovered" type="button" class="btn btn-link " style="padding-top: 15px;padding-left:12px;">#BeDiscovered</button></li>
+    <li><button id="btnMyItenirary" type="button" class="btn btn-link " style="padding-top: 15px;padding-left:12px;">#MyItinerary</button></li>
     <li>
         @*Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })*@
-		@Html.Raw("<div class=\"btn-link\" color=\"#9d9d9d;\"  style=\"padding-top: 17px;\">Hello " + User.Identity.GetUserName() + "!</div>")
-		@Html.Hidden("IsServiceExists", TempData["IsServiceExists"])
+        @Html.Raw("<div class=\"btn-link\" color=\"#9d9d9d;\"  style=\"padding-top: 17px;\">Hello " + User.Identity.GetUserName() + "!</div>")
+        @Html.Hidden("IsServiceExists", TempData["IsServiceExists"])
     </li>
     <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
 </ul>
@@ -38,5 +39,10 @@ $('#btnBeDiscovered').click(function (e){
 
 });
 
+$('#btnMyItenirary').click(function (e){
+	e.preventDefault();
+	window.location.href = "@Url.Action("MyItineraries", "Home")";
+
+});
 
 </script>
